# magos

./: CMakeLists.txt  README.md  autoconfig.cfg  concat.txt  desc.md  down.md  req.md
include/: builder.h  canvas.h  color_config.h  common.h  magosgame.h  maze.h  render.h  solver.h
src/: builder.cpp  canvas.cpp  magosgame.cpp  main.cpp  maze.cpp  render.cpp  solver.cpp
